--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "patent-website",
+  "name": "intellium-website",
   "version": "1.0.0",
-  "description": "Lead generation website for a patent agency.",
+  "description": "Intellium yuridik xizmatlari uchun sayt",
   "main": "server.js",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "exceljs": "^4.4.0"
+    "exceljs": "^4.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
